tests/NormalTests/paczka1/fuzzy1/18839640.err
Error in line 4: VSdGn8et A831 35,27
Error in line 5: S302 A831 70,7
Error in line 11: K9vGOUZ S42 36,0
Error in line 26: K9vGOUZ A958 39,2
Error in line 9: VSdGn8et A958 149,7
Error in line 38: tCvhq A831 45,0
